--- a/app/src/main/res/layout/activity_user_reg.xml
+++ b/app/src/main/res/layout/activity_user_reg.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ui_background_style1"
-    tools:context=".login.user_regActivity"
+    tools:context=".login.activity_user_reg"
     tools:ignore="HardcodedText">
 
     <ScrollView
