--- a/app/src/main/res/layout/activity_addpeople.xml
+++ b/app/src/main/res/layout/activity_addpeople.xml
@@ -850,11 +850,17 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
+        style="@style/Base.Widget.MaterialComponents.PopupMenu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:animateLayoutChanges="true"
+        android:background="@color/white"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.MaterialComponents.Light"
         app:headerLayout="@layout/nav_header"
+        app:itemTextAppearance="@style/Base.TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
+        app:itemTextColor="@color/black"
         app:menu="@menu/drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
