--- a/app/src/main/res/layout/fragment_home_events_viewer.xml
+++ b/app/src/main/res/layout/fragment_home_events_viewer.xml
@@ -7,7 +7,7 @@
     <!--<TextView-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent"-->
-    <!--android:text="Birthdays"-->
+    <!--android:text="Dummy"-->
     <!--android:textColor="@color/black"-->
     <!--android:textSize="34sp"/>-->
 
