--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorprimary">#008577</color>
-    <color name="colorprimarydark">#00574B</color>
-    <color name="coloraccent">#D81B60</color>
+    <!--<color name="colorprimary">#008577</color>-->
+    <!--<color name="colorprimarydark">#00574B</color>-->
+    <!--<color name="coloraccent">#D81B60</color>-->
 
     <!--Primary Colors-->
+    <!--<color name="primary">#34495E</color>-->
+    <!--<color name="primary_dark">#282B2A</color>-->
+    <!--<color name="primary_light">#6e7174</color>-->
+    <!--<color name="accent">#00BCD4</color>-->
+    <!--<color name="primary_text">#212121</color>-->
+    <!--<color name="secondary_text">#727272</color>-->
+    <!--<color name="icons">#FFFFFF</color>-->
+    <!--<color name="divider">#B6B6B6</color>-->
+
     <color name="primarylight">#5affd6</color>
     <color name="primarydark">#59b2ff</color>
     <color name="accent">#3ddfff</color>
