--- a/app/src/main/res/drawable/ui_button_style1.xml
+++ b/app/src/main/res/drawable/ui_button_style1.xml
@@ -4,7 +4,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
             <corners android:radius="30dp" />
-            <gradient android:angle="-180" android:centerColor="#3ddfff" android:endColor="#5affbf" android:startColor="#44a8ff" />
+            <gradient android:angle="-180" android:centerColor="#40c4ff" android:endColor="#64ffda" android:startColor="#42a5f5" />
         </shape>
     </item>
 </selector>
