--- a/app/src/main/res/drawable/ui_button_style2.xml
+++ b/app/src/main/res/drawable/ui_button_style2.xml
@@ -3,7 +3,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <corners android:radius="30dp" />
-            <gradient android:centerColor="#59b2ff" android:endColor="#59b2ff" android:startColor="#59b2ff" />
+            <gradient android:centerColor="#64b5f6" android:endColor="#64b5f6" android:startColor="#64b5f6" />
             <!--android:angle="-180"-->
         </shape>
     </item>
