--- a/app/src/main/res/drawable/ui_nav_header_style1.xml
+++ b/app/src/main/res/drawable/ui_nav_header_style1.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-            <gradient android:angle="-180" android:centerColor="#3ddfff" android:endColor="#5affd6" android:startColor="#59b2ff" />
+            <gradient android:angle="-180" android:centerColor="#40c4ff" android:endColor="#64ffda" android:startColor="#64b5f6" />
         </shape>
     </item>
 </selector>
