--- a/app/src/main/res/drawable/ui_scroll_constraint_style2.xml
+++ b/app/src/main/res/drawable/ui_scroll_constraint_style2.xml
@@ -3,7 +3,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <corners android:radius="10dp" />
-            <gradient android:angle="-180" android:centerColor="#31ddff" android:endColor="#35a1ff" android:startColor="#35a1ff" />
+            <gradient android:angle="-180" android:centerColor="#40c4ff" android:endColor="#42a5f5" android:startColor="#42a5f5" />
         </shape>
     </item>
 </selector>
