--- a/app/src/main/res/layout/card_mainbday.xml
+++ b/app/src/main/res/layout/card_mainbday.xml
@@ -21,11 +21,14 @@
         <TextView
             android:id="@+id/cliday_name"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
             android:layout_margin="8dp"
             android:layout_marginEnd="8dp"
             android:drawableStart="@drawable/ic_cake_pink_24dp"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="NAME"
             android:elevation="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/abeezee"
@@ -43,12 +46,13 @@
         <TextView
             android:id="@+id/clibday_birthday"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:layout_centerHorizontal="true"
             android:layout_margin="8dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/abeezee"
             android:text="dd-mm-yyyy"
+            android:gravity="center"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
