--- a/app/src/main/res/layout/activity_diary_note.xml
+++ b/app/src/main/res/layout/activity_diary_note.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/ui_background_style1"
     android:fitsSystemWindows="true"
-    tools:context=".activity_main"
-    tools:ignore="HardcodedText"
+    tools:context=".ui_data.diary.activity_add_diary"
+    tools:ignore="HardcodedText,Autofill"
     tools:openDrawer="start">
 
     <LinearLayout
